# code

./: .env_template  README.md  black.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
aws_s3/: README.md  manage_s3.py
aws_s3/config/: cfg.py
aws_s3/files/parent/: parent.txt
aws_s3/files/parent/child/: child.txt
aws_s3/handlers/: s3_handler.py
mocking_with_pytest/: README.md  core.py  country.py  get_data.py  test_get_data.py
mocking_with_pytest/advanced/: core.py  country.py  get_data.py
mocking_with_pytest/advanced/tests/: test_get_data.py
mocking_with_pytest/simple/: get_data.py
mocking_with_pytest/simple/tests/: test_get_data.py
mocking_with_pytest/tests/: test_get_data.py  test_get_data_advanced.py  test_get_data_simple.py
oop/: country.py
oop/classes/: country.py  country_ext.py
oop/classes/tests/: test_country.py
solutions/typescript/: README.md
utilities/: logger.py
