[flake8]
max-line-length = 120
exclude = venv, .venv, .git, __pycache__, docs/source/conf.py, old, _build, build, dist

[black]
line-length = 120
exclude = venv, .venv, .git, .hg, .mypy_cache, .tox, buck-out, _build, build, dist

[options]
install_requires =
    black>=23.9.1
    isort>=3.11.1
    pylint>=3.0.0
    requests>=2.31.0
    pytest>=7.4.2
    pytest-mock>=3.11.1
    pyproject-flake8>=6.1.0
